--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px transparent #947676 !important; 
+  outline: 1px solid #947676 !important; 
   } 
   
    * { 
@@ -12,3 +12,18 @@
     .form-control {
       width: 25%
     }
+
+    .home-background {
+    background-image: url("../../client/images/grass.jpg");
+    background-repeat: no-repeat, repeat;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
