--- a/server/public/main.css
+++ b/server/public/main.css
@@ -70,3 +70,20 @@ footer {
 .table {
   font-size: 0.8em;
 }
+
+.leaderboard-h3 {
+  text-align: center
+}
+
+body {
+  color: white;
+  font-family: 'Roboto Mono', monospace
+}
+
+.leaderboard {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  background: #EFEEEE;
+  color: rgb(88, 87, 87)
+}
