--- a/server/public/main.css
+++ b/server/public/main.css
@@ -82,9 +82,11 @@ body {
 }
 
 .leaderboard {
-  width: 50%;
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
   background: #EFEEEE;
-  color: rgb(88, 87, 87)
+  color:black;
+  font-size: 1.1em
 }
+
