mapped over members to show each person in the couple

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -93,3 +93,12 @@ body {
 .bets {
   background: white;
 }
+
+.members {
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  background: #EFEEEE;
+  color:black;
+  font-size: 1.1em
+}
