--- a/server/public/main.css
+++ b/server/public/main.css
@@ -58,7 +58,7 @@
 
 .nav {
   font-family: 'Roboto Mono', monospace;
-  padding: 1% 2% 1% 2%
+  padding: 1% 2% 5% 2%
 }
 
 footer {
@@ -72,7 +72,7 @@ footer {
   color: rgb(88, 87, 87);
 }
 
-h3 {
+h3, h5 {
   text-align: center
 }
 
@@ -104,10 +104,11 @@ body {
 }
 
 .timetable {
-  width: 40%;
+  width: 15%;
   margin-left: auto;
   margin-right: auto;
   background: #EFEEEE;
   color:black;
-  font-size: 1.1em
+  font-size: 1.1em;
+  padding: 1%
 }
