--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px transparent #947676 !important; 
+  outline: 1px solid #947676 !important; 
   } 
   
    * { 
@@ -104,7 +104,6 @@ body {
 }
 
 .timetable {
-  width: 15%;
   margin-left: auto;
   margin-right: auto;
   background: #EFEEEE;
