--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px solid #947676 !important; 
+  outline: 1px transparent #947676 !important; 
   } 
   
    * { 
@@ -104,10 +104,10 @@ body {
 }
 
 .timetable {
+  color:white;
+  font-size: 1.1em;
+  padding: 1%;
+  margin: 0 5%;
   margin-left: auto;
   margin-right: auto;
-  background: #EFEEEE;
-  color:black;
-  font-size: 1.1em;
-  padding: 1%
 }
