--- a/server/public/main.css
+++ b/server/public/main.css
@@ -58,7 +58,7 @@
 
 .nav {
   font-family: 'Roboto Mono', monospace;
-  padding: 1% 2% 5% 2%
+  padding: 1% 2% 2% 2%
 }
 
 footer {
@@ -110,6 +110,8 @@ body {
   margin: 0 5%;
   margin-left: auto;
   margin-right: auto;
+  border: solid 1px white;
+  width: 20%
 }
 
 .bg-green {
