--- a/server/public/main.css
+++ b/server/public/main.css
@@ -87,8 +87,14 @@ body {
   margin-right: auto;
   background: #EFEEEE;
   color:black;
-  font-size: 1.1em
+  font-size: 1.1em;
+  opacity: 0.8;
 }
+
+.timetable-h3 {
+  text-decoration: underline;
+}
+
 
 .bets {
   background: white;
@@ -104,14 +110,14 @@ body {
 }
 
 .timetable {
-  color:white;
+  color: white;
   font-size: 1.1em;
   padding: 1%;
   margin: 0 5%;
   margin-left: auto;
   margin-right: auto;
   border: solid 1px white;
-  width: 20%
+  width: 20%;
 }
 
 .bg-green {
