--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px transparent #947676 !important; 
+  outline: 1px solid #947676 !important; 
   } 
   
    * { 
@@ -51,18 +51,15 @@
   }
 
 .header {
-  padding: 2% 2% 0 2%;
   color: white;
   font-family: 'Roboto Mono', monospace;
 }
 
 .nav {
   font-family: 'Roboto Mono', monospace;
-  padding: 1% 2% 2% 2%
 }
 
 footer {
-  padding: 2%;
   color: white;
   font-family: 'Roboto Mono', monospace;
 }
@@ -72,19 +69,12 @@ footer {
   color: rgb(88, 87, 87);
 }
 
-h3, h5 {
-  text-align: center
-}
-
 body {
   color: white;
   font-family: 'Roboto Mono', monospace
 }
 
-.leaderboard {
-  width: 40%;
-  margin-left: auto;
-  margin-right: auto;
+.table-leaderboard {
   background: #EFEEEE;
   color:black;
   font-size: 1.1em;
@@ -112,12 +102,9 @@ body {
 .timetable {
   color: white;
   font-size: 1.1em;
-  padding: 1%;
-  margin: 0 5%;
-  margin-left: auto;
-  margin-right: auto;
   border: solid 1px white;
-  width: 20%;
+  width: 40%;
+  margin: 2%
 }
 
 .bg-green {
@@ -142,7 +129,8 @@ body {
   align-items: center;
 }
 
-.input-name {
-  margin-left: 2%;
-  margin-top: 1%
+.leaderboard {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center
 }
