--- a/server/public/main.css
+++ b/server/public/main.css
@@ -144,3 +144,131 @@ body {
   margin: 1%
 }
 
+.calculator {
+  background-color: #E4EDF8;
+  height: 400px;
+  width: 300px;
+  border-radius: 15px;
+  position: relative;
+  top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 12px 12px #009ACD;
+  border-left: 4px solid #009ACD;
+  border-top: 2px solid #009ACD;
+}
+
+input {
+  position: relative;
+  width:240px;
+  height: 50px;
+  left: 28px;
+  top: 50px;
+  font-size: 30px;
+  text-align: right;
+  margin-bottom: 8%;
+  border-radius: 5px;
+  padding-right: 4%
+}
+
+
+.keys {
+  position: relative;
+  top: 35px;
+  left: 15px;
+  bottom: 10px
+}
+
+.button {
+  width: 45px;
+  height: 35px;
+  border: none;
+  border-radius: 8px;
+  margin-left: 17px;
+  cursor: pointer;
+  border-top: 2px solid transparent;
+  font-size: 25px;
+}
+
+.button.blue {
+  color: white;
+  background-color: #00ACD2;
+  box-shadow: 3px 3px #004C76;
+}
+
+.button.blue:hover {
+  color: white;
+  background-color: #004C76;
+}
+
+.button.blue:active {
+  transform: translateY(4px);
+}
+
+.button.white {
+  color: #048ED8;
+  background-color: white;
+  box-shadow: 3px 3px #908EAE;
+}
+
+.button.white:hover {
+  background-color: #908EAE;
+  color: white
+}
+
+.button.white:active {
+  transform: translateY(4px);
+}
+
+
+.button.orange {
+  background-color: #FFC200;
+  color: #89687F;
+  box-shadow: 3px 3px #FC9925;
+}
+
+.button.orange:hover {
+  background-color: #FC9925;
+  color: white;
+  box-shadow: 3px 3px #FC9925;
+}
+
+.button.orange:active {
+  transform: translateY(4px);
+}
+
+
+p {
+  line-height: 10px;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 2%;
+  font-family: 'Mali', cursive;
+  color: #2E2E37;
+  font-size: 45px
+}
+
+/* .bg {
+  background-image: url("./background.jpg");
+  background-color: grey;
+  background-position: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  filter: blur(0.5px) brightness(80%);
+  min-height: 100vh;
+  height: 100%;
+  width: 100vw;
+  display:flex;
+  align-items: center;
+} */
+
