--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px transparent #947676 !important; 
+  outline: 1px solid #947676 !important; 
   } 
   
    * { 
@@ -99,9 +99,10 @@ body {
 
 .timetable {
   color: white;
-  font-size: 1.2em;
+  font-size: 1.3em;
   margin-left: 6%;
-  margin-top: 20%
+  margin-top: 20%;
+  height: 200px
 }
 
 .bg-green {
@@ -238,7 +239,7 @@ body {
 }
 
 
-p {
+.p-calc {
   line-height: 10px;
 }
 
