--- a/server/public/main.css
+++ b/server/public/main.css
@@ -283,5 +283,9 @@ body {
 
 .balance {
   margin-top: 10%;
-  text-align: center
+  text-align: center;
+  width: 40%;
+  padding: 2%;
+  margin-left: auto;
+  margin-right: auto;
 }
