--- a/server/public/main.css
+++ b/server/public/main.css
@@ -98,7 +98,8 @@ body {
 .timetable {
   margin-left: auto;
   margin-right: auto;
-  text-align: center
+  text-align: center;
+  margin: 3% 0 5% 0
 }
 
 .bg-green {
