--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px solid #947676 !important; 
+  outline: 1px transparent #947676 !important; 
   } 
   
    * { 
@@ -291,4 +291,15 @@ body {
   text-align: center;
   color: black;
   opacity: 0.8;
+}
+
+button {
+  border: none;
+  width: 140px;
+  padding: 3% 0;
+  margin: 5% 0;
+}
+
+.btn-group-vertical {
+  margin-top: 10%
 }
