tidying up components

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -35,7 +35,7 @@
     background-size: cover !important;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    filter: blur(0.5px) brightness(80%);
+    filter: blur(0.5px) brightness(100%);
     min-height: 100vh;
     height: 100%;
     width: 100vw;
@@ -98,8 +98,14 @@ body {
 .timetable {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20%;
   text-align: center;
-  margin: 3% 0 5% 0
+  margin: 3% 0 5% 0;
+  background: #EFEEEE;
+  color:black;
+  font-size: 1.1em;
+  opacity: 0.8;
+  line-height: 1.8em;
 }
 
 .bg-green {
@@ -290,16 +296,28 @@ body {
   padding-top: 20px;
   text-align: center;
   color: black;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
-button {
+.nav-button {
   border: none;
   width: 140px;
   padding: 3% 0;
   margin: 5% 0;
+  background: white;
+
 }
 
 .btn-group-vertical {
-  margin-top: 10%
+  margin-top: 10%;
+}
+
+.balance {
+  background: #EFEEEE;
+  color:black;
+  font-size: 1.1em;
+  opacity: 0.8;
+  width: 80%;
+  text-align: center;
+  margin: 15%
 }
