--- a/server/public/main.css
+++ b/server/public/main.css
@@ -105,7 +105,7 @@ body {
   color:black;
   font-size: 1.1em;
   opacity: 0.8;
-  line-height: 1.8em;
+  line-height: 1.8                                                                                                                                                                                              em;
 }
 
 .bg-green {
@@ -134,6 +134,10 @@ body {
   margin-left: auto;
   margin-right: auto;
   text-align: center
+}
+
+.leaderboard-h3 {
+  padding: 3% 0
 }
 
 .input-name {
