--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px transparent #947676 !important; 
+  outline: 1px solid #947676 !important; 
   } 
   
    * { 
@@ -57,7 +57,7 @@
 
 .nav {
   font-family: 'Montserrat', sans-serif;
-  margin: 3% 1% 3% 1%;
+  margin-left: 1%
 }
 
 footer {
@@ -65,9 +65,9 @@ footer {
   margin: 1%
 }
 
-.table {
-  font-size: 0.8em;
-  color: rgb(88, 87, 87);
+.table.bets {
+  font-size: 0.9em;
+  color: black
 }
 
 body {
@@ -312,13 +312,28 @@ body {
   opacity: 1.0;
 }
 
+.top-bar {
+  width: 100%; /* Set the width of the sidebar */
+  text-align: left;
+  color: black;
+  margin-bottom: 2%
+}
+
 .nav-button {
   border: none;
   width: 140px;
-  padding: 3% 0;
+  padding: 4% 0;
   margin: 5% 0;
   background: #10642B;
-  color: white
+  color: white;
+}
+
+.nav-button-top {
+  border: none;
+  background: #10642B;
+  color: white;
+  margin-right: 2%;
+  width: 100px
 }
 
 .btn-group-vertical {
@@ -339,11 +354,36 @@ body {
   padding: 2%
 }
 
-.nav-button:hover {
+.nav-button:hover, .nav-button-top:hover {
   background-color: rgb(104, 179, 128);
   color: white
 }
 
-.nav-button:active {
+.nav-button:active, .nav-button-top:active {
   transform: translateY(4px);
 }
+
+.bets-h1 {
+  display: inline-block;
+  margin: 2% 5% 1% 1%;
+  color: white
+}
+
+.add-button:hover {
+  background: #10642B;
+  color: white;
+}
+
+.add-button:active {
+  transform: translateY(4px);
+}
+
+.add-button {
+  border: none;
+  background-color: white;
+  color: black;
+  margin-right: 2%;
+  width: 100px
+}
+
+
