--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px solid #947676 !important; 
+  outline: 1px transparent #947676 !important; 
   } 
   
    * { 
@@ -67,7 +67,7 @@ footer {
 
 .table.bets {
   font-size: 0.9em;
-  color: black
+  color: black;
 }
 
 body {
